# Pressure_sensor

./: .gitignore  Audit.md  README.md  dialogs_qt.py  dpg_theme.py  main.py  main.spec  qml_sources.py  sensor_app.py  sensor_app.spec  sensor_app_qml.py  sensor_app_qml.spec  sensor_app_qt.py  sensor_app_qt.spec  sensor_bridge.py  sensor_core.py  sensor_plot_widget.py
.github/workflows/: build-exe.yml
cistern_analytics/: Cargo.toml  build.rs
cistern_analytics/src/: app.rs  logic.rs  main.rs  sensor.rs
config/: settings.json
tests/: conftest.py  test_logic.py
ui/: __init__.py  dashboard.py  runtime.py  styles.py
