[package]
name = "cistern_analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_plot = "0.27"
egui_extras = "0.27" # For Tables
serialport = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
chrono = "0.4"
directories = "5.0"
image = { version = "0.25", features = ["ico"] }
crossbeam-channel = "0.5"
rfd = "0.14"

[build-dependencies]
winres = "0.1"
